[gd_scene load_steps=22 format=2]

[ext_resource path="res://main_split.gd" type="Script" id=1]
[ext_resource path="res://fonts/theme.tres" type="Theme" id=2]
[ext_resource path="res://main_menu_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://instances/camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://instances/start.tscn" type="PackedScene" id=5]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("MainMenu/MainViewport")

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/BebasNeueRegular.otf"

[sub_resource type="DynamicFont" id=3]
size = 68
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 6
font_data = SubResource( 2 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("MainMenu/PreviewViewport")

[sub_resource type="DynamicFont" id=5]
size = 68
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/BebasNeueRegular.otf"

[sub_resource type="DynamicFont" id=7]
size = 64
outline_size = 6
outline_color = Color( 0.0235294, 0.133333, 0.172549, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 6
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 6
outline_color = Color( 0.0235294, 0.133333, 0.172549, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 6
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 12
outline_size = 2
outline_color = Color( 0.0235294, 0.133333, 0.172549, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = SubResource( 6 )

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("Viewport1")

[sub_resource type="ViewportTexture" id=11]
viewport_path = NodePath("Viewport2")

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("Viewport3")

[sub_resource type="ViewportTexture" id=13]
viewport_path = NodePath("Viewport4")

[sub_resource type="DynamicFont" id=14]
size = 88
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 6
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 6
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 6
font_data = SubResource( 2 )

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MainMenu" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = 1281.0
margin_bottom = 718.0
theme = ExtResource( 2 )

[node name="MainViewport" type="Viewport" parent="MainMenu"]
size = Vector2( 1280, 720 )
own_world = true
render_target_v_flip = true
shadow_atlas_size = 1024

[node name="Spatial" parent="MainMenu/MainViewport" instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="MainMenu"]
texture = SubResource( 1 )
centered = false

[node name="Panel" type="Panel" parent="MainMenu"]
modulate = Color( 0.184314, 0.168627, 0.168627, 0.360784 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartButton" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5
margin_top = -106.231
margin_right = 96.5
margin_bottom = -32.2313
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="NumPlayers" type="Label" parent="MainMenu"]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 69.7871
margin_top = -191.894
margin_right = 334.787
margin_bottom = -168.894
text = "Number Of Players : "

[node name="OptionButton" type="OptionButton" parent="MainMenu/NumPlayers"]
margin_left = 261.574
margin_top = -3.09512
margin_right = 309.574
margin_bottom = 25.9049
text = "1"
items = [ "0", null, false, 0, null, "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null ]
selected = 1

[node name="Keyboard" type="CheckBox" parent="MainMenu"]
margin_left = 56.5096
margin_top = 199.963
margin_right = 366.51
margin_bottom = 230.963
text = "Player 1 use keyboard"

[node name="Bots" type="CheckBox" parent="MainMenu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 58.7862
margin_top = -121.535
margin_right = 138.786
margin_bottom = -90.5345
pressed = true
text = "Bots"

[node name="PreviewViewport" type="Viewport" parent="MainMenu"]
size = Vector2( 256, 256 )
own_world = true
shadow_atlas_size = 1024

[node name="Control" type="Control" parent="MainMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MainMenu/Control"]
anchor_right = 1.0
margin_left = 543.248
margin_top = -304.149
margin_right = -539.752
margin_bottom = -281.149
text = "Track Selection"

[node name="Panel" type="Panel" parent="MainMenu/Control"]
modulate = Color( 0.952941, 0.00392157, 0.00392157, 0.670588 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -131.5
margin_top = -282.0
margin_right = 138.5
margin_bottom = -14.0

[node name="TrackPreview" type="Sprite" parent="MainMenu/Control"]
position = Vector2( 643.633, -147.689 )
texture = SubResource( 4 )

[node name="Next" type="Button" parent="MainMenu/Control"]
margin_left = 780.876
margin_top = -189.656
margin_right = 836.876
margin_bottom = -115.656
custom_fonts/font = SubResource( 5 )
text = "->"

[node name="Previous" type="Button" parent="MainMenu/Control"]
margin_left = 450.849
margin_top = -189.656
margin_right = 506.849
margin_bottom = -115.656
custom_fonts/font = SubResource( 5 )
text = "<-"

[node name="Laps" type="Label" parent="MainMenu"]
editor/display_folded = true
margin_left = 547.164
margin_top = 203.943
margin_right = 735.164
margin_bottom = 226.943
text = "Number of Laps"

[node name="OptionButton" type="OptionButton" parent="MainMenu/Laps"]
margin_left = 201.983
margin_top = -5.1694
margin_right = 249.983
margin_bottom = 23.8306
text = "3"
items = [ "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "5", null, false, 5, null ]
selected = 2

[node name="ExitButton" type="Button" parent="MainMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -162.32
margin_top = -68.6667
margin_right = -33.3201
margin_bottom = -39.6667
text = "Exit Game"

[node name="Title" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -162.5
margin_top = 25.7755
margin_right = 162.5
margin_bottom = 89.7755
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.027451, 0.74902, 1, 1 )
text = "Y.E.A.R. 3044"

[node name="Title2" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.565
margin_top = 93.3656
margin_right = 168.435
margin_bottom = 157.366
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.027451, 0.74902, 1, 1 )
text = "Yet even another racer"

[node name="Title3" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 96.8162
margin_top = 126.301
margin_right = 421.816
margin_bottom = 190.301
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.027451, 0.74902, 1, 1 )
text = "A game by kakoeimon"

[node name="Title4" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 478.028
margin_top = 700.677
margin_right = 803.028
margin_bottom = 764.677
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.027451, 0.74902, 1, 1 )
text = "created for game off 2019"

[node name="Viewport1" type="Viewport" parent="."]
pause_mode = 1
size = Vector2( 1280, 360 )
handle_input_locally = false
render_target_v_flip = true
shadow_atlas_size = 1024

[node name="Camera" parent="Viewport1" instance=ExtResource( 4 )]
pause_mode = 1
far = 500.0

[node name="Viewport2" type="Viewport" parent="."]
pause_mode = 1
size = Vector2( 1280, 360 )
handle_input_locally = false
render_target_v_flip = true
shadow_atlas_size = 1024

[node name="Camera" parent="Viewport2" instance=ExtResource( 4 )]
pause_mode = 1

[node name="Viewport3" type="Viewport" parent="."]
pause_mode = 1
size = Vector2( 1280, 360 )
handle_input_locally = false
render_target_v_flip = true
shadow_atlas_size = 1024

[node name="Camera" parent="Viewport3" instance=ExtResource( 4 )]
pause_mode = 1

[node name="Viewport4" type="Viewport" parent="."]
pause_mode = 1
size = Vector2( 1280, 360 )
handle_input_locally = false
render_target_v_flip = true
shadow_atlas_size = 1024

[node name="Camera" parent="Viewport4" instance=ExtResource( 4 )]
pause_mode = 1

[node name="Screen1" type="Sprite" parent="."]
pause_mode = 1
visible = false
texture = SubResource( 10 )
centered = false

[node name="Screen2" type="Sprite" parent="."]
pause_mode = 1
visible = false
position = Vector2( 0, 360 )
texture = SubResource( 11 )
centered = false

[node name="Screen3" type="Sprite" parent="."]
pause_mode = 1
visible = false
position = Vector2( 0, 360 )
texture = SubResource( 12 )
centered = false

[node name="Screen4" type="Sprite" parent="."]
pause_mode = 1
visible = false
position = Vector2( 0, 360 )
texture = SubResource( 13 )
centered = false

[node name="StartTimer" type="Timer" parent="."]
pause_mode = 1
process_mode = 0
wait_time = 4.0

[node name="start" parent="." instance=ExtResource( 5 )]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38672, 0 )

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 1281.0
margin_bottom = 717.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -289.983
margin_right = 117.0
margin_bottom = -201.983
custom_fonts/font = SubResource( 14 )
text = "PAUSED"

[node name="ResumeButton" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = 167.416
margin_right = 78.5
margin_bottom = 221.416
custom_fonts/font = SubResource( 15 )
text = "RESUME"

[node name="ReturnMainButton" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = 266.87
margin_right = 182.0
margin_bottom = 308.87
custom_fonts/font = SubResource( 16 )
text = "Return to main menu"

[node name="instructions" type="Label" parent="PauseMenu"]
margin_left = 31.0249
margin_top = 48.7535
margin_right = 449.025
margin_bottom = 175.753
text = "w or Up or R2 : Acceleration
S or down or R1 : break/reverse
a or left or joy : Turn left
d or Right or joy : turn Right
Space or L2 : Boost"

[node name="instructions2" type="Label" parent="PauseMenu"]
margin_left = 29.9169
margin_top = 243.767
margin_right = 447.917
margin_bottom = 370.767
text = "When you boost your max velocity gets greater
and you turn faster.
Whatch for the Boost meter. You can keep pushing boost even
when the meter is empty but you are risking to get a penalty
of not controlling your hovership for some time.
Use with caution."

[node name="SoundVolume" type="Label" parent="."]
pause_mode = 2
editor/display_folded = true
margin_left = 1056.98
margin_top = 173.897
margin_right = 1223.98
margin_bottom = 196.897
theme = ExtResource( 2 )
text = "Sound Volume"

[node name="SoundHSlider" type="HSlider" parent="SoundVolume"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -81.5
margin_top = 1.18829
margin_right = 81.5
margin_bottom = 17.1883
value = 80.0
tick_count = 100
ticks_on_borders = true

[node name="Shadows" type="Label" parent="."]
pause_mode = 2
editor/display_folded = true
margin_left = 1056.98
margin_top = 247.737
margin_right = 1262.98
margin_bottom = 270.737
theme = ExtResource( 2 )
text = "Shadows Quality"

[node name="ShadowHSlider" type="HSlider" parent="Shadows"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -101.007
margin_top = 1.18829
margin_right = 61.9932
margin_bottom = 17.1883
max_value = 3.0
value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="Antialiasing" type="Label" parent="."]
pause_mode = 2
editor/display_folded = true
margin_left = 1056.98
margin_top = 323.385
margin_right = 1223.98
margin_bottom = 346.385
theme = ExtResource( 2 )
text = "Anti-Aliasing"

[node name="AntialiasingHSlider" type="HSlider" parent="Antialiasing"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.7151
margin_top = 1.18829
margin_right = 84.2849
margin_bottom = 17.1883
max_value = 4.0
value = 2.0
tick_count = 5
ticks_on_borders = true

[node name="DrawDistance" type="Label" parent="."]
pause_mode = 2
margin_left = 1056.98
margin_top = 387.227
margin_right = 1233.98
margin_bottom = 410.227
theme = ExtResource( 2 )
text = "Draw Distance"

[node name="DrawDistanceHSlider" type="HSlider" parent="DrawDistance"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.9053
margin_top = 1.18829
margin_right = 80.0947
margin_bottom = 17.1883
min_value = 200.0
max_value = 5000.0
value = 5000.0
tick_count = 100
ticks_on_borders = true
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/Control/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="MainMenu/Control/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="MainMenu/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/ReturnMainButton" to="." method="_on_ReturnMainButton_pressed"]
[connection signal="value_changed" from="SoundVolume/SoundHSlider" to="." method="_on_SoundHSlider_value_changed"]
[connection signal="value_changed" from="Shadows/ShadowHSlider" to="." method="_on_ShadowHSlider_value_changed"]
[connection signal="value_changed" from="Antialiasing/AntialiasingHSlider" to="." method="_on_AntialiasingHSlider_value_changed"]
[connection signal="value_changed" from="DrawDistance/DrawDistanceHSlider" to="." method="_on_DrawDistanceHSlider_value_changed"]
